--- a/styles.css
+++ b/styles.css
@@ -7,7 +7,6 @@ body {
 
 .section-1 { 
     background-color: #1f2937;
-    
 }
 
 .header {
@@ -28,4 +27,49 @@ ul {
     list-style: none;
     color: #e5e7eb;
     font-size: 18px;
+}
+
+.content { 
+    display: flex;
+    justify-content: center;
+    gap: 90px; 
+    padding: 100px;
+    margin-left: 100px;
+    margin-right: 100px;
+}
+
+.title { 
+    font-size: 48px;
+    color: #f9faf8;
+    font-weight: 900;
+}
+
+.subtext { 
+    color: #e5e7eb;
+    font-size: 18px;
+}
+
+button { 
+    background-color: #3882f6;
+    color: #f9faf8; 
+    padding: 6px 20px;
+    border: none;
+    border-radius: 8px;
+}
+
+.right { 
+    background-color: grey;
+    color: #e5e7eb;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex: 1; 
+}
+
+.left { 
+    display: flex;
+    flex-direction: column;
+    align-items: baseline;
+    gap: 16px;
+    flex: 1; 
 }
