Finished section 3 and 4 Final style touches to section 3 and 4 Footer completed

--- a/styles.css
+++ b/styles.css
@@ -3,6 +3,7 @@
 body { 
     font-family: Roboto;
     margin: 0;
+    height: 100vh; 
 }
 
 .section-1 { 
@@ -83,8 +84,8 @@ button {
     color: #1f2937; 
     font-size: 36px;
     font-weight: 900;
-    text-align: center;
     margin: 50px;
+    text-align: center;
 }
 
 .section-2 .content { 
@@ -128,42 +129,54 @@ button {
     font-weight: 100px;
     text-align: left;
     color: #1f2937;
-    margin-left: 200px;
-    margin-right: 200px;
+    /* margin-left: 200px;
+    margin-right: 200px; */
 }
 
 .author { 
     margin-left: 700px;
     text-align: right;
-    margin-right: 200px;
     font-weight: bold;
 }
 
-.section-4 { 
-    height: 500px;
-}
-
 .section-4 .content {
-    margin-top: 100px;
-    margin-bottom: 100px;
-    margin-left: 300px;
-    margin-right: 300px;
     padding: 50px;
+    padding-left: 100px;
+    padding-right: 100px;
+    margin-left: 100px;
+    margin-right: 100px;
     border-radius: 10px;
     background-color: #3882f6;
     display: flex;
     justify-content: space-between;
+    align-items: center;
 }
 
 .section-4 .left { 
     color: #e5e7eb;
     display: flex;
     flex-direction: column;
-    align-items: baseline;
+    justify-content: baseline;
 }
 
 .section-4 .title { 
     color: #e5e7eb;
+    margin: 0;
     text-align: left;
+}
+
+.section-4 button { 
+    border: #e5e7eb solid;
+    font-size: 20px;
+    padding-left: 36px;
+    padding-right: 36px;
+}
+
+.footer { 
+    display: flex;
+    justify-content: center;
+    padding: 36px;
+    background-color: #1f2937;
+    color: #e5e7eb;
 }
 
